# loxide

./: Cargo.toml  README.md  _typos.toml  lychee.toml
crates/loxide_interpreter/: Cargo.toml
crates/loxide_interpreter/fixture/bool/: equality.lox
crates/loxide_interpreter/fixture/for/: closure_in_body.lox
crates/loxide_interpreter/fixture/function/: empty_body.lox
crates/loxide_interpreter/fixture/if/: truth.lox
crates/loxide_interpreter/fixture/operator/: add.lox  equals.lox  not.lox  not_equals.lox
crates/loxide_interpreter/fixture/return/: return_void_if_no_value.lox
crates/loxide_interpreter/snapshots/eval/input/: bad_fn_call.lox  closure.lox  fn_call.lox  for_stmt.lox  for_stmt_expect_bool.lox  if_stmt.lox  invalid_binary.lox  literal.lox  valid_binary.lox  valid_unary.lox  variable.lox  while_stmt.lox  while_stmt_expect_bool.lox
crates/loxide_interpreter/snapshots/eval/output/: bad_fn_call.snap  block_stmt.snap  closure.snap  fn_call.snap  for_stmt.snap  for_stmt_expect_bool.snap  if_stmt.snap  invalid_binary.snap  invalid_unary.snap  literal.snap  valid_binary.snap  valid_unary.snap  variable.snap  while_stmt.snap  while_stmt_expect_bool.snap
crates/loxide_interpreter/snapshots/interpreter/snapshots-inputs/: if_stmt.lox  invalid_unary.lox  valid_binary.lox  variable.lox
crates/loxide_interpreter/snapshots/interpreter/snapshots-outputs/: loxide_interpreter__eval__tests__block_stmt.snap  loxide_interpreter__eval__tests__invalid_unary.snap  loxide_interpreter__eval__tests__literal.snap  loxide_interpreter__eval__tests__valid_binary.snap  loxide_interpreter__eval__tests__valid_unary.snap  loxide_interpreter__eval__tests__variable.snap
crates/loxide_interpreter/src/: callable.rs  environment.rs  error.rs  eval.rs  interpreter.rs  lib.rs  utils.rs  value.rs
crates/loxide_interpreter/tests/: integration.rs  unittest.rs  utils.rs
crates/loxide_interpreter/tests/common/: annotate.rs  mod.rs  utils.rs
crates/loxide_interpreter/tests/snapshots/: integration@assignment__associativity.snap  integration@assignment__global.snap  integration@assignment__grouping.snap  integration@assignment__infix_operator.snap  integration@assignment__local.snap  integration@assignment__prefix_operator.snap  integration@assignment__syntax.snap  integration@assignment__undefined.snap  integration@block__empty.snap  integration@block__scope.snap  integration@bool__equality.snap  integration@bool__not.snap  integration@call__bool.snap  integration@call__nil.snap  integration@call__num.snap  integration@call__string.snap  integration@empty_file.snap  integration@for__closure_in_body.snap  integration@for__return_closure.snap  integration@for__return_inside.snap  integration@for__scope.snap  integration@for__statement_condition.snap  integration@for__statement_increment.snap  integration@for__statement_initializer.snap  integration@for__syntax.snap  integration@for__var_in_body.snap  integration@function__body_must_be_block.snap  integration@function__empty_body.snap  integration@function__extra_arguments.snap  integration@function__local_mutual_recursion.snap  integration@function__local_recursion.snap  integration@function__missing_arguments.snap  integration@function__missing_comma_in_parameters.snap  integration@function__nested_call_with_arguments.snap  integration@function__parameters.snap  integration@function__recursion.snap  integration@function__too_many_arguments.snap  integration@function__too_many_parameters.snap  integration@if__dangling_else.snap  integration@if__else.snap  (+52 more)
crates/loxide_parser/: Cargo.toml
crates/loxide_parser/snapshots/parser/input/: fn_call.lox  fn_decl.lox  for_statement.lox  primary.lox  return_stmt.lox  term.lox  unary.lox  while_statement.lox
crates/loxide_parser/snapshots/parser/output/: block_statement.snap  comparison.snap  declarations.snap  equality.snap  expression.snap  factor.snap  fn_call.snap  fn_decl.snap  for_statement.snap  if_statement.snap  many_statements.snap  primary.snap  return_stmt.snap  single_statement.snap  term.snap  unary.snap  while_statement.snap
crates/loxide_parser/snapshots/parser/snapshots-inputs/: block_statement.lox  declarations.lox  expression.lox  if_statement.lox  many_statements.lox  primary.lox  single_statement.lox
crates/loxide_parser/snapshots/parser/snapshots-outputs/: loxide__parser__tests__comparison.snap  loxide__parser__tests__factor.snap  loxide__parser__tests__many_statements.snap  loxide__parser__tests__term.snap  loxide__parser__tests__unary.snap  loxide_parser__parser__tests__block_statement.snap  loxide_parser__parser__tests__comparison.snap  loxide_parser__parser__tests__expression.snap  loxide_parser__parser__tests__if_statement.snap  (+3 more)
crates/loxide_parser/src/: ast.rs  error.rs  lib.rs  macros.rs  parser.rs  prophetic.rs  scanner.rs  token.rs  utils.rs
crates/loxide_parser/tests/: regression.rs
crates/loxide_parser/tests/regression/: issue15.rs  issue18.rs  issue6.rs  issue8.rs
crates/loxide_testsuite/: Cargo.toml
crates/loxide_testsuite/src/: __private_api.rs  lib.rs  macros.rs  probe.rs
crates/loxide_testsuite/src/unittest/: tester.rs
crates/loxide_testsuite_macros/: Cargo.toml
crates/loxide_testsuite_macros/src/: lib.rs
(+70 files in other folders)
