[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# publish = true
loxide_parser = { version = "0.1.0", path = "crates/loxide_parser" }
loxide_interpreter = { version = "0.1.0", path = "crates/loxide_interpreter" }
# publish = false
loxide_macros = { version = "0.1.0", path = "crates/loxide_macros" }
loxide_testsuite = { version = "0.1.0", path = "crates/loxide_testsuite" }
loxide_testsuite_macros = { version = "0.1.0", path = "crates/loxide_testsuite_macros" }
insta = { version = "1.34.0", features = ["glob"] }
thiserror = { version = "1.0.56" }
