[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# publish = true
loxide_parser = { version = "0.1.0", path = "crates/loxide_parser" }
loxide_interpreter = { version = "0.1.0", path = "crates/loxide_interpreter" }
# publish = false
loxide_macros = { version = "0.1.0", path = "crates/loxide_macros" }
loxide_testsuite = { version = "0.1.0", path = "crates/loxide_testsuite" }
loxide_testsuite_macros = { version = "0.1.0", path = "crates/loxide_testsuite_macros" }
loxide_diagnostic = { version = "0.1.0", path = "crates/loxide_diagnostic" }
insta = { version = "1.41.1", features = ["glob"] }
thiserror = { version = "1.0.69" }
miette = { version = "7.4.0", features = ["fancy"] }
