[package]
name = "loxide_interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loxide_parser = { workspace = true }
loxide_testsuite = { workspace = true }
thiserror = { workspace = true }
paste = "1.0.14"

[dev-dependencies]
insta = { workspace = true }
loxide_macros = { workspace = true }