[package]
name = "loxide_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = { workspace = true, features = ["glob"] }
thiserror = { workspace = true }

[dev-dependencies]
loxide_macros = { workspace = true }
automod = "1.0.12"