[package]
name = "loxide_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = { workspace = true, features = ["glob"] }
thiserror = { workspace = true }
miette = { workspace = true }
loxide_diagnostic = { workspace = true }
clap = { version = "4.5.13", features = ["derive"] }

[dev-dependencies]
loxide_macros = { workspace = true }
loxide_testsuite = { workspace = true }
automod = "1.0.14"