[package]
name = "loxide_testsuite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = { workspace = true, features = ["glob", "filters"] }
once_cell = "1.20.0"
loxide_testsuite_macros = { workspace = true }
